[package]
name = "grip"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# gecko = { git = "https://github.com/ionlang/gecko", branch = "master" }
clap = "2.33.3"
gecko = { path = "../gecko" }
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm12-0"] }
toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }
