[package]
name = "grip"
version = "0.1.0"
edition = "2018"

[profile.release]
opt-level = "z"  # Optimize for size.
lto = true  # Enable link-time optimization (possibly reduce binary size).
codegen-units = 1  # Use a single codegen unit.

[dependencies]
# TODO: gecko = { git = "https://github.com/ionlang/gecko", branch = "master" }
clap = "2.33.3"
gecko = { path = "../gecko" }
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm12-0"] }
toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }
codespan-reporting = "0.11.1"
