[package]
name = "grip"
version = "0.1.0"
edition = "2018"

[profile.release]
opt-level = "z"  # Optimize for size.
lto = true  # Enable link-time optimization (possibly reduce binary size).
codegen-units = 1  # Use a single codegen unit.

[dependencies]
gecko = { git = "https://github.com/geckolang/gecko", branch = "dev" }
clap = "2.33.3"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm12-0"] }
toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }
codespan-reporting = "0.11.1"
log = "0.4.14"
indicatif = "0.16.2"
ansi_term = "0.12.1"
reqwest = { version = "0.11.6", features = ["stream"] }
tokio = { version = "1.13.0", features = ["full"] }
futures-util = "0.3.17"
